--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-toastify": "^7.0.3",
     "react-transition-group": "^4.4.1",
+    "redux": "^4.1.0",
     "rxjs": "^6.6.7",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
