--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.1",
     "cloudinary": "^1.25.1",
     "formik": "^2.2.6",
+    "google-map-react": "^2.1.10",
     "node-sass": "^5.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.2.1",
