--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.1.0",
     "rxjs": "^6.6.7",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
